VDYPForward control parser using shared framework